Fix height of FullHeightWrapper that caused content overlapping

--- a/src/components/FullHeightWrapper/FullHeightWrapper.scss
+++ b/src/components/FullHeightWrapper/FullHeightWrapper.scss
@@ -2,7 +2,7 @@
 
 .full-height {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   @include flexCenter();
   flex-direction: column;
 }
